--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,5 @@ maintainer=Hakan Kaya <mail@hakankaya.kim>
 sentence=NodeRed Server
 paragraph=HTTP connection with NodeRED Server for Arduino boards, ESP board.
 category=Communication
-url=https://github.com/haknkayaa
+url=https://github.com/haknkayaa/arduino-nodered-server
 architectures=*
-examples=examples/*.ino
